--- a/index.html
+++ b/index.html
@@ -6,13 +6,105 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Spotify Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="/styles/style.css" />
   </head>
+
   <body>
-    Premium Discover Help Download Music for everyone. Spotify is now free on mobile, tablet and computer. Listen to the
-    right music, wherever you are. What’s on Spotify? Millions of Songs There are millions of songs on Spotify HD Music
-    Listen to music as if you were listening live Stream Everywhere Stream music on your smartphone, tablet or computer
-    It’s as yeezy as Kanye West. Search Know what you want to listen to? Just search and hit play. Browse Check out the
-    latest charts, brand new releases and great playlists for right now. Discover Enjoy new music every Monday with your
-    own personal playlist. Or sit back and enjoy Radio.
+    <!-- Section 1-->
+    <!-- NavBar + Logo -->
+    <div class="header">
+      <img class="logoImg" src="/images/spotify-logo.png" alt="spotify-logo" />
+
+      <nav class="navBar">
+        <ul class="navBarUl">
+          <li><a href="#premium">Premium</a></li>
+          <li><a href="#discover">Discover</a></li>
+          <li><a href="#help">Help</a></li>
+          <li><a href="#download">Download</a></li>
+        </ul>
+      </nav>
+    </div>
+
+    <!-- Section 2-->
+    <!-- MainPage + BackgroundImg-->
+
+    <div class="containerMainPage">
+      <h1>Music for everyone.</h1>
+      <p class="textMainPage">
+        Spotify is now free on mobile, tablet and computer. Listen to the right
+        music, wherever you are.
+      </p>
+    </div>
+
+    <!-- Section 3-->
+    <!-- Container What's on Spotify-->
+
+    <div class="ContainerWhatOnSpotify">
+      <h3>What’s on Spotify?</h3>
+
+      <div>
+        <article class="container1">
+          <img src="/images/music-icon.png" alt="music-icon" />
+          <h4>Millions of Songs</h4>
+          <p class="textContainer">There are millions of songs on Spotify</p>
+        </article>
+
+        <article class="container2">
+          <img src="/images/high-quality-icon.png" alt="high-quality-icon" />
+          <h4>HD Music</h4>
+          <p class="textContainer">
+            Listen to music as if you were listening live
+          </p>
+        </article>
+
+        <article class="container3">
+          <img src="/images/devices-icon.png" alt="devices-icon" />
+          <h4>Stream Everywhere</h4>
+          <p class="textContainer">
+            Stream music on your smartphone, tablet or computer
+          </p>
+        </article>
+      </div>
+    </div>
+
+    <!-- Section 4-->
+    <!-- Green background container-->
+    <div class="containerGreenBackgroung">
+      <h3>It’s as yeezy as Kanye West.</h3>
+      <div>
+        <article>
+          <h4>Search</h4>
+          <p>Know what you want to listen to? Just search and hit play.</p>
+        </article>
+
+        <article>
+          <h4>Browse</h4>
+          <p>
+            Check out the latest charts, brand new releases and great playlists
+            for right now.
+          </p>
+        </article>
+
+        <article>
+          <h4>Discover</h4>
+          <p>
+            Enjoy new music every Monday with your own personal playlist. Or sit
+            back and enjoy Radio.
+          </p>
+        </article>
+
+        <!-- <img
+          class="spotifyApp"
+          src="/images/spotify-app.jpg"
+          alt="spotify-app"
+        />-->
+
+        <!-- <img
+          class="whiteIcon"
+          src="/images/spotify-icon-white.png"
+          alt="spotify-icon-white"
+        />-->
+      </div>
+    </div>
   </body>
 </html>
