--- a/index.html
+++ b/index.html
@@ -70,40 +70,42 @@
     <!-- Section 4-->
     <!-- Green background container-->
     <div class="containerGreenBackgroung">
-      <h3>It’s as yeezy as Kanye West.</h3>
+      <img
+        class="whiteIcon"
+        src="/images/spotify-icon-white.png"
+        alt="spotify-icon-white"
+      />
       <div>
-        <article>
-          <h4>Search</h4>
-          <p>Know what you want to listen to? Just search and hit play.</p>
-        </article>
+        <div>
+          <h3>It’s as yeezy as Kanye West.</h3>
+          <article>
+            <h4>Search</h4>
+            <p>Know what you want to listen to? Just search and hit play.</p>
+          </article>
 
-        <article>
-          <h4>Browse</h4>
-          <p>
-            Check out the latest charts, brand new releases and great playlists
-            for right now.
-          </p>
-        </article>
+          <article>
+            <h4>Browse</h4>
+            <p>
+              Check out the latest charts, brand new releases and great
+              playlists for right now.
+            </p>
+          </article>
 
-        <article>
-          <h4>Discover</h4>
-          <p>
-            Enjoy new music every Monday with your own personal playlist. Or sit
-            back and enjoy Radio.
-          </p>
-        </article>
-
-        <!-- <img
-          class="spotifyApp"
-          src="/images/spotify-app.jpg"
-          alt="spotify-app"
-        />-->
-
-        <!-- <img
-          class="whiteIcon"
-          src="/images/spotify-icon-white.png"
-          alt="spotify-icon-white"
-        />-->
+          <article>
+            <h4>Discover</h4>
+            <p>
+              Enjoy new music every Monday with your own personal playlist. Or
+              sit back and enjoy Radio.
+            </p>
+          </article>
+        </div>
+        <div class="spotifyApp-container">
+          <img
+            class="spotifyApp"
+            src="/images/spotify-app.jpg"
+            alt="spotify-app"
+          />
+        </div>
       </div>
     </div>
   </body>
